--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
-name: mvc
+name: packagist_mvc
 description: 基础MVC框架封装
-version: 1.1.1
+version: 1.1.2
 homepage: https://github.com/flutter-packagist/mvc
 
 environment:
